--- a/pages/SKstyle.css
+++ b/pages/SKstyle.css
@@ -49,13 +49,14 @@ header{
   text-align: center;
   align-items: center;
 
+  justify-content: space-evenly;
+
   border-radius:  0 0 20rem 20rem ;
 
   margin-bottom: 2.3rem;
   margin-top: 0;
 
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding: 2rem;
 }
 
 header a{
@@ -70,10 +71,11 @@ header a{
   font-size: 2rem;
   font-weight: 900;
   text-decoration: none;
-
+/*
   position: fixed;
   left: 1rem;
   top: 1rem;
+*/
   z-index: 2;
 }
 
@@ -83,6 +85,11 @@ header > a > i{
 
 header h1{
   margin: 0 auto;
+  width: 12rem;
+}
+
+header .centralizar{
+  width: 6rem;
 }
 
 main{
@@ -166,24 +173,28 @@ section #textoSHORT{
   header{
     gap: 0px;
     margin-bottom: 2.3rem;
-    padding: 2rem 0px;
-    justify-content:space-evenly;
+    box-sizing: border-box;
+    padding: 2rem 1rem 2rem 1rem ;
+    justify-content:space-around;
 
+    align-items: center;
   }
 
   header h1{
     padding: 0;
     width: 9.5rem;
     margin: 0 auto;
-    position: relative;
+ 
     z-index: 1;
   }
 
   header a {
-    position: fixed;
-    left: 1rem;
-    top: 1rem;
+
     z-index: 2;
+  }
+
+  header h1{
+    width: 12rem;
   }
 
   main{
