--- a/pages/CURSOSstyle.css
+++ b/pages/CURSOSstyle.css
@@ -1,7 +1,7 @@
 :root{
   font-size: 62.5%;
 
-  --cor-padrao :  #00E6AB;
+  --cor-padrao : #03989D;
   --cor-constraste-1:  hsl(0, 0%, 100%);
   --cor-constraste-2:  hsl(165, 94%, 86%);
 
