--- a/pages/Estyle.css
+++ b/pages/Estyle.css
@@ -1,7 +1,7 @@
 :root{
   font-size: 62.5%;
 
-  --cor-padrao :  #00E6AB;
+  --cor-padrao :  #03989D;
   --cor-constraste-1:  hsl(0, 0%, 100%);
   --cor-constraste-2:  hsl(165, 94%, 86%);
 
@@ -123,7 +123,7 @@ section img{
   margin: 0 auto;
 
   border-radius: 4rem;
-  border: 2px solid #00E6AB;
+  border: 2px solid var(--cor-padrao);
 
   margin-top: -13rem;
 }
