--- a/pages/MEUSPJstyle.css
+++ b/pages/MEUSPJstyle.css
@@ -1,7 +1,7 @@
 :root{
   font-size: 62.5%;
 
-  --cor-padrao :  #00E6AB;
+  --cor-padrao :  #03989D;
   --cor-constraste-1:  hsl(0, 0%, 100%);
   --cor-constraste-2:  hsl(165, 94%, 86%);
 }
@@ -119,7 +119,7 @@ section{
   text-align: center;
   place-items: center;
 
-  height: 50rem;
+  height: 70rem;
 
   margin: 0 auto;
 
