--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 :root{
   font-size: 62.5%;
-  --cor-padrao : #04D7DE;
+  --cor-padrao : #1DC7FA;
   --cor-constraste-1:  hsl(0, 0%, 100%);
   --cor-constraste-2:  hsl(165, 94%, 86%);
 
